--- a/src/index.css
+++ b/src/index.css
@@ -94,3 +94,26 @@ button {
   padding: 10px;
   margin-top: 1rem;
 }
+
+/* FlashCard */
+.flashcard {
+  /* border: 1px solid red; */
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.question {
+  /* border: 1px solid black; */
+  padding: 5rem;
+  background-color: aliceblue;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: 800;
+}
+
+.selected {
+  background-color: red;
+}
